--- a/css/style.css
+++ b/css/style.css
@@ -105,9 +105,6 @@
 		box-shadow:0px 0px 0px 10px #ff00004f,0px 0px 0px 10px #ff00004f;
 	}
 } 
-.home-btn{
-	width:18%;
-}
 .home-btn:hover{
 	background-color:red !important;
 }
@@ -234,7 +231,7 @@
 .sch-img{
 	float: left;
     width: auto;
-    height: auto;
+    height: 100%;
     margin-right: 1rem;
 }
 .sch-img img{
@@ -252,7 +249,7 @@
 }
 iframe{
 	width:100%;
-	height:100%;
+	height:45vh;
 }
 .venue-info{
 	background-image:linear-gradient(#0000008f,#0000008f),
